--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@tanstack/react-query": "^5.59.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
+    "@types/lodash": "^4.17.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
