--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,10 @@ next-env.d.ts
 
 # avatars bucket
 /avatars/
+
+# duplicate configs
+next.config.js
+tailwind.config.js
+tailwind.config.cjs
+postcss.config.cjs
+postcss.config.mjs
