--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "clean": "rimraf .next",
+    "dev": "npm run clean && next dev",
+    "build": "npm run clean && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -17,6 +18,7 @@
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-context-menu": "^2.2.2",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-hover-card": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
@@ -29,28 +31,32 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slider": "^1.2.1",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
+    "@shadcn/ui": "latest",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
+    "clsx": "^2.0.0",
     "cmdk": "^1.0.0",
+    "cookies-next": "^4.1.1",
+    "critters": "^0.0.23",
     "embla-carousel-react": "^8.3.0",
-    "framer-motion": "^11.11.1",
+    "framer-motion": "^10.16.4",
     "input-otp": "^1.2.4",
-    "lucide-react": "^0.447.0",
-    "next": "^14.2.14",
+    "lucide-react": "^0.284.0",
+    "next": "latest",
+    "next-auth": "^4.24.10",
     "next-themes": "^0.3.0",
-    "react": "^18.3.1",
+    "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
     "react-resizable-panels": "^2.1.4",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
-    "tailwind-merge": "^2.5.3",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.0.0",
     "zod": "^3.23.8"
@@ -59,7 +65,6 @@
     "@headlessui/react": "^2.1.9",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@sentry/nextjs": "^8.33.1",
@@ -67,49 +72,33 @@
     "@stripe/stripe-js": "^4.7.0",
     "@supabase/postgrest-js": "^1.16.2",
     "@supabase/storage-js": "^2.7.1",
-    "@supabase/supabase-js": "^2.45.4",
-    "@tanstack/react-query": "^5.59.0",
+    "@supabase/supabase-js": "^2.45.6",
+    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.15",
+    "@tanstack/react-query": "^5.59.16",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
-    "@types/node": "^20.16.10",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.0",
-    "@types/lodash": "^4.17.10",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "currency.js": "^2.0.4",
+    "@types/node": "^20.8.4",
+    "@types/react": "^18.2.27",
+    "@types/react-dom": "^18.2.12",
+    "autoprefixer": "^10.4.16",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.14",
     "eslint-plugin-jsx-a11y": "^6.10.0",
-    "geofirestore": "^5.2.0",
-    "geolib": "^3.3.4",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
-    "leaflet": "^1.9.4",
-    "mixpanel-browser": "^2.55.1",
-    "next-cookies": "^2.0.3",
-    "next-i18next": "^15.3.1",
-    "next-pwa": "^5.6.0",
-    "next-seo": "^6.6.0",
-    "number-precision": "^1.6.0",
-    "postcss": "^8",
+    "postcss": "^8.4.31",
     "prettier": "^3.3.3",
     "react-dropzone": "^14.2.9",
-    "react-ga4": "^2.1.0",
     "react-hook-form": "^7.53.0",
-    "react-leaflet": "^4.2.1",
-    "react-map-gl": "^7.1.7",
-    "react-redux": "^9.1.2",
     "react-select": "^5.8.1",
-    "redux": "^5.0.1",
+    "rimraf": "^6.0.1",
     "sharp": "^0.33.5",
     "stripe": "^17.1.0",
-    "stripe-webhook-middleware": "^0.2.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2",
     "yup": "^1.4.0",
     "zustand": "^5.0.0-rc.2"
   }
