--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@shadcn/ui": "latest",
+    "@supabase/auth-helpers-nextjs": "latest",
+    "@types/js-cookie": "^3.0.6",
+    "@types/ua-parser-js": "^0.7.39",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^1.0.0",
@@ -45,6 +48,7 @@
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^10.16.4",
     "input-otp": "^1.2.4",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.284.0",
     "next": "latest",
     "next-auth": "^4.24.10",
@@ -58,6 +62,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
+    "ua-parser-js": "^1.0.39",
     "vaul": "^1.0.0",
     "zod": "^3.23.8"
   },
