--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@shadcn/ui": "latest",
-    "@supabase/auth-helpers-nextjs": "latest",
+    "@supabase/auth-helpers-nextjs": "^0.9.0",
+    "@supabase/auth-helpers-react": "^0.4.2",
+    "@supabase/supabase-js": "^2.39.0",
     "@types/js-cookie": "^3.0.6",
     "@types/ua-parser-js": "^0.7.39",
     "class-variance-authority": "^0.7.0",
@@ -77,7 +79,6 @@
     "@stripe/stripe-js": "^4.7.0",
     "@supabase/postgrest-js": "^1.16.2",
     "@supabase/storage-js": "^2.7.1",
-    "@supabase/supabase-js": "^2.45.6",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-query": "^5.59.16",
