--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.4.0",
+    "@googlemaps/js-api-loader": "^1.16.8",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -52,7 +53,7 @@
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.284.0",
-    "next": "latest",
+    "next": "^14.1.0",
     "next-auth": "^4.24.10",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
@@ -65,6 +66,7 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "ua-parser-js": "^1.0.39",
+    "use-places-autocomplete": "^4.0.1",
     "vaul": "^1.0.0",
     "zod": "^3.23.8"
   },
