--- a/package.json
+++ b/package.json
@@ -67,7 +67,10 @@
     "ua-parser-js": "^1.0.39",
     "use-places-autocomplete": "^4.0.1",
     "vaul": "^1.0.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "@supabase/auth-helpers-nextjs": "^0.9.0",
+    "lodash": "^4.17.21",
+    "@types/lodash": "^4.14.202"
   },
   "devDependencies": {
     "@headlessui/react": "^2.1.9",
