--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@shadcn/ui": "latest",
+    "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.39.0",
     "@types/js-cookie": "^3.0.6",
+    "@types/lodash": "^4.14.202",
     "@types/ua-parser-js": "^0.7.39",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -51,6 +53,7 @@
     "framer-motion": "^10.16.4",
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.284.0",
     "next": "14.2.22",
     "next-auth": "^4.24.10",
@@ -67,10 +70,7 @@
     "ua-parser-js": "^1.0.39",
     "use-places-autocomplete": "^4.0.1",
     "vaul": "^1.0.0",
-    "zod": "^3.23.8",
-    "@supabase/auth-helpers-nextjs": "^0.9.0",
-    "lodash": "^4.17.21",
-    "@types/lodash": "^4.14.202"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@headlessui/react": "^2.1.9",
