--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@tanstack/react-query": "^5.59.16",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
+    "@types/google.maps": "^3.58.1",
     "@types/node": "^20.8.4",
     "@types/react": "^18.2.27",
     "@types/react-dom": "^18.2.12",
