--- a/package.json
+++ b/package.json
@@ -41,15 +41,18 @@
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.39.0",
+    "@types/formidable": "^3.4.5",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.14.202",
     "@types/ua-parser-js": "^0.7.39",
+    "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^1.0.0",
     "cookies-next": "^4.1.1",
     "critters": "^0.0.23",
     "embla-carousel-react": "^8.3.0",
+    "formidable": "^3.5.2",
     "framer-motion": "^10.16.4",
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
@@ -69,6 +72,7 @@
     "tailwindcss-animate": "^1.0.7",
     "ua-parser-js": "^1.0.39",
     "use-places-autocomplete": "^4.0.1",
+    "uuid": "^11.0.3",
     "vaul": "^1.0.0",
     "zod": "^3.23.8"
   },
