--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "use-places-autocomplete": "^4.0.1",
     "uuid": "^11.0.3",
     "vaul": "^1.0.0",
+    "vscode": "^1.1.37",
     "zod": "^3.23.8"
   },
   "devDependencies": {
