--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.4.0",
     "@googlemaps/js-api-loader": "^1.16.8",
+    "@hello-pangea/dnd": "^17.0.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -39,6 +40,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@shadcn/ui": "latest",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
+    "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.39.0",
     "@types/formidable": "^3.4.5",
@@ -62,6 +64,7 @@
     "next-auth": "^4.24.10",
     "next-themes": "^0.3.0",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "react-error-boundary": "^4.0.13",
