--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "npm run clean && next dev",
     "build": "npm run clean && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix"
   },
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.4.0",
