--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
+    "@react-google-maps/api": "^2.20.5",
     "@shadcn/ui": "latest",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/ssr": "^0.5.2",
@@ -65,6 +66,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "react-error-boundary": "^4.0.13",
+    "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.4",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
