--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "npm run clean && next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "next lint --fix"
+    "lint:fix": "next lint --fix",
+    "geocode": "dotenv -e .env -- tsx scripts/geocode-existing-listings.ts"
   },
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.4.0",
@@ -40,12 +41,12 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@react-google-maps/api": "^2.20.5",
-    "@shadcn/ui": "latest",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.39.0",
     "@types/formidable": "^3.4.5",
+    "@types/google-maps-react": "^2.0.4",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.14.202",
     "@types/ua-parser-js": "^0.7.39",
@@ -90,6 +91,7 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@sentry/nextjs": "^8.33.1",
+    "@shadcn/ui": "^0.0.4",
     "@stripe/react-stripe-js": "^2.8.1",
     "@stripe/stripe-js": "^4.7.0",
     "@supabase/postgrest-js": "^1.16.2",
@@ -105,7 +107,8 @@
     "@types/react-dom": "^18.2.12",
     "autoprefixer": "^10.4.16",
     "date-fns": "^3.6.0",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
+    "dotenv-cli": "^7.3.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.14",
     "eslint-plugin-jsx-a11y": "^6.10.0",
@@ -117,9 +120,11 @@
     "react-hook-form": "^7.53.0",
     "react-select": "^5.8.1",
     "rimraf": "^6.0.1",
+    "shadcn-ui": "^0.9.4",
     "sharp": "^0.33.5",
     "stripe": "^17.1.0",
     "tailwindcss": "^3.3.3",
+    "tsx": "^4.7.0",
     "typescript": "^5.7.3",
     "yup": "^1.4.0",
     "zustand": "^5.0.0-rc.2"
