--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "react-error-boundary": "^4.0.13",
+    "react-google-autocomplete": "^2.7.4",
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.4",
     "recharts": "^2.12.7",
